--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+body{
+    
+}
 img  {
     width: 100px;
     height: 100px;
     box-shadow: 0.5em 0.5em 0.2em rgb(0, 0, 0, 0.2);
-    margin: 0 auto;
+    
 }
 .item{
     margin-left: 1em;
@@ -28,44 +31,114 @@ thead{
     vertical-align: middle;
     border-color: inherit;
 }
+header img{
+    height: 40px;
+    width: 40px;
+    margin-right: 0.5em;
+    box-shadow: 0.1em 0.1em 0.04em rgb(0, 0, 0, 0.2);
+}
 header{
-    height: 100px;
+    display: flex;
+    border-radius: 4px;
+    justify-content: center;
+    align-items:center;
+    height: 50px;
     width: 100%;
-    background-color: aqua;
+    margin-top: 2em;
+    margin-bottom: 0;
+    
+}
+header h3{
+    margin-left: 0.5em;
+}
+header a{
+    display: flex;
+    color: black;
+    align-items:center;
+    text-decoration: none;
+}
+header a h1 {
+    font-size: 1.5em;
+    transition: 500ms;
+}
+header a:hover{
+    transition: 500ms;
+    color:rgb(156, 11, 11);
+    text-shadow: 00.2em 0.2em 0.2em rgb(0, 0, 0, 0.2);
 }
 aside{
-    background-color: bisque;
-    margin-bottom: 1em;
+    
     min-width: 330px;
     max-width: 330px;
     max-height: 390px;
     min-height: 390px;
+    background-image:url('../img/smartphone.png');
+    background-position: center;
+    background-size:contain;
+    background-repeat: no-repeat;
+    
 }
 .row{
+    margin: 0 auto;
     display: flex;
-    flex-direction: row-reverse;    
-    width: 800px;    
+    flex-flow: row-reverse wrap;    
+    justify-content: center;
+    max-width: 800px;    
+}
+@media (max-width: 800px) {
+    .row {
+        width: ;
+        flex-direction:column-reverse;
+        align-content: center;
+    }
+    aside{
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+    article{
+        height: 350px;
+    }
+  }
+
+.login-row{
+    margin-bottom: 2em;
 }
 .item{
     flex-grow: 4;
 }
 footer{
-    height: 75px;
+    margin: 0 auto;
+    max-width: 750px;
     background-color: black;
     color: white;
     align-items: center;
     display: flex;
     justify-content: center;
+    border-radius: 4px;
+}
+footer h2{
+    margin: 5px;
 }
 nav{
-    height: 40px;
+   
+    margin-top: 0;
+    margin-bottom: 1em;
     align-items: center;
     display: flex;
     justify-content: center;
 }
-nav > a {
-    margin-left: 1em;
-    padding: 1em;
+nav a {
+    margin-left: 0.5em;
+    padding: 0.5em;
+    font-size: 0.9em;
+    text-decoration: none;
+    color: black;
+    transition: 500ms;
+}
+nav a:hover{
+    font-size: 1.3em;
+    text-shadow: 0.1em 0.1em 0.1em rgb(0, 0, 0, 0.2);
+    transition: 100ms;
 }
 header{
     display: flex;
@@ -75,4 +148,44 @@ header{
 form{
     display: flex;
     flex-direction: column;
+}
+.form-item{
+    display: flex;
+    flex-direction: column;
+}
+input{
+    height: 30px;
+    border: 0;
+    box-shadow: 0.2em 0.2em 0.5em 0.05em rgb(0, 0, 0, 0.2);
+    border-radius: 0.5em;
+}
+label{
+    margin-bottom: 2em;
+    margin: auto;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+}
+button{
+    height: 50px;
+    width: 100%;
+    border: none;
+    border-radius: 0.5em;
+    box-shadow: 0.2em 0.2em 0.5em 0.05em rgb(0, 0, 0, 0.2);
+}
+button:hover{
+    background-color:darkgray;
+}
+button:active{
+    transform: translate(1px,2px);
+}
+article{
+    padding-top: 2em;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    max-width: 330px;
+}
+article hr{
+    width: 370px;
+    margin-left: -20px;
 }
