--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,5 @@
-body{
-    
-}
-img  {
-    width: 100px;
-    height: 100px;
-    box-shadow: 0.5em 0.5em 0.2em rgb(0, 0, 0, 0.2);
-    
-}
+
+
 .item{
     margin-left: 1em;
     padding-bottom: 0;
@@ -67,16 +60,20 @@ header a:hover{
     text-shadow: 00.2em 0.2em 0.2em rgb(0, 0, 0, 0.2);
 }
 aside{
-    
+     
     min-width: 330px;
     max-width: 330px;
     max-height: 390px;
-    min-height: 390px;
+    min-height: 390px;/*
     background-image:url('../img/smartphone.png');
     background-position: center;
     background-size:contain;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
     
+}
+img{
+    width: 330px;
+    height: 390px;
 }
 .row{
     margin: 0 auto;
@@ -85,20 +82,19 @@ aside{
     justify-content: center;
     max-width: 800px;    
 }
-@media (max-width: 800px) {
-    .row {
-        width: ;
-        flex-direction:column-reverse;
-        align-content: center;
-    }
-    aside{
-        margin-top: 2em;
-        margin-bottom: 2em;
-    }
-    article{
-        height: 350px;
-    }
-  }
+.registro-row{
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    max-width: 800px; 
+    margin-bottom: 2em;
+}
+.registro-row > aside{
+    position: sticky;
+    top: 10px;
+}
+
 
 .login-row{
     margin-bottom: 2em;
@@ -153,7 +149,7 @@ form{
     display: flex;
     flex-direction: column;
 }
-input{
+input, select{
     height: 30px;
     border: 0;
     box-shadow: 0.2em 0.2em 0.5em 0.05em rgb(0, 0, 0, 0.2);
@@ -178,14 +174,81 @@ button:hover{
 button:active{
     transform: translate(1px,2px);
 }
-article{
+section{
     padding-top: 2em;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     max-width: 330px;
 }
-article hr{
+section hr{
     width: 370px;
     margin-left: -20px;
 }
+.registro-row  .form-item{
+    flex-direction: row;
+    justify-content: baseline;   
+    padding-left: 1em; 
+}
+.registro-row label{
+    width: 200px;
+    margin-left: 0;
+}
+
+.registro-row input, select{
+    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
+}
+.registro-row section{
+    width: 400px;
+    max-width: 400px;
+}
+#genero input{
+    width: 10px;
+    min-width:unset;
+    box-shadow: 0 0;
+}
+#genero label{
+    width: auto;
+    margin-right: 0.5em;
+}
+#genero{
+    display: flex;
+    align-content: center;
+}
+#coordenadas input{
+    width: 30%;
+    min-width: unset;
+
+}
+#coordenadas label{
+    width: 10%;
+    margin-right: 0.5em;
+}
+#coordenadas{
+    min-width: 200px;
+    max-width: 200px;
+    display: flex;
+    align-content: center;
+}
+@media (max-width: 800px) {
+    .row {
+        flex-direction:column-reverse;
+        align-content: center;
+    }
+    aside{
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+    section{
+        height: 350px;
+    }
+    .registro-row > aside{
+        position: relative;
+        top: 10px;
+    }
+    section{
+        height: 100%;
+    }
+  }
